# petri_nets

./: README.md  pyproject.toml
notebooks/: 00_traffic_light.py  01_single_printer.py
petri_lab/: __init__.py
petri_lab/core/: __init__.py  engine.py  marking.py  net.py  place.py  transition.py
petri_lab/viz/: __init__.py  render.py
tests/: test_demo0.py  test_engine.py
